# bkrs

./: .gitignore  CMakeLists.txt  LICENCE  README.md  azure-pipelines.yml
examples/: CMakeLists.txt  detect_target.cpp  generate_pulses.cpp  interface.cpp  processor.cpp
include/radsim/mathematics/: approx_function.hpp  constants.hpp  fourier.hpp  math_vector.hpp  mathutils.hpp
include/radsim/radar/: adc.hpp  bandpass_filter.hpp  beam_pattern.hpp  pulse_data.hpp  pulse_data_reader.hpp  pulse_data_writer.hpp  radar.hpp  radar_config.hpp  radar_config_parser.hpp  radar_data_queue.hpp  radar_interface.hpp  radar_state.hpp  target.hpp
include/radsim/utils/: assert.hpp  rng.hpp  test_utils.hpp  timer.hpp  utils.hpp
latex/: Manual.tex  help
mathematics/: CMakeLists.txt
mathematics/src/: fourier.cpp  math_vector.cpp
python/: CMakeLists.txt  python_setup.conf.in
python/cxx/: CMakeLists.txt  convert.hpp  mathematics_pybind.cpp  radar_pybind.cpp  utils_pybind.cpp
python/examples/: CMakeLists.txt  eval_bandpass.py  eval_beam_shape.py  eval_circling_target.py  eval_detection_cluster.py  eval_filtered_pulse.py  eval_multipulse.py  eval_noise_signal.py  eval_noise_target.py  eval_samplings2.py
python/lib/: CMakeLists.txt
python/tests/: CMakeLists.txt  t_vectors.cpp  test_adc.py  test_approx_function.py  test_bandpass.py  test_beampattern.py  test_fourier.py  test_math_utils.py  test_math_vector.py  test_radar.py  test_radar_config.py  test_radar_generate.py  test_target.py  test_utils.py  test_vectors.py
radar/: CMakeLists.txt
radar/src/: adc.cpp  radar.cpp  radar_config.cpp  radar_config_parser.cpp  radar_data_queue.cpp  radar_interface.cpp  radar_state.cpp
radar/test/: test_adc.cpp  test_beam_pattern.cpp  test_config_parser.cpp  test_interface_performance.cpp  test_interface_plain.cpp  test_pulse_data.cpp  test_radar.cpp  test_radar_data_queue.cpp  test_radar_exceptions.cpp  test_radar_signal.cpp  test_target.cpp
src/mathematics/: math_vector.cpp  mathutils.cpp
src/radar/: bandpass_filter.cpp  beam_pattern.cpp  pulse_data.cpp  pulse_data_reader.cpp  pulse_data_writer.cpp  radar.cpp  radar_data_queue.cpp  radar_interface.cpp  radar_state.cpp  target.cpp
src/utils/: assert.cpp  rng.cpp  timer.cpp  utils.cpp
test-data/radar_configs/: naval_radar.txt  short_range_radar.txt  stationary_radar.txt
tests/: CMakeLists.txt
tests/mathematics/: test_approx_function.cpp  test_fourier.cpp  test_math_vector.cpp  test_mathutils.cpp
tests/radar/: test_adc.cpp  test_bandpass_filter.cpp  test_beam_pattern.cpp  test_config_parser.cpp  test_interface.cpp  test_interface_performance.cpp  test_interface_plain.cpp  test_pulse_data.cpp  test_pulse_data_reader.cpp  test_pulse_data_writer.cpp  test_radar.cpp  test_radar_config.cpp  test_radar_data_queue.cpp  test_radar_data_queue_concurrence.cpp  test_radar_exceptions.cpp  test_radar_signal.cpp  test_target.cpp
tests/utils/: test_assert.cpp  test_rng.cpp  test_timer.cpp  test_utils.cpp
utils/: CMakeLists.txt
utils/src/: rng.cpp
utils/test/: test_utils.cpp
